--- a/css/styles.css
+++ b/css/styles.css
@@ -93,6 +93,10 @@ button {
   color: var(--accent-color);
 }
 
+.section {
+  outline: 2px solid greenyellow;
+}
+
 .section-title {
   margin-top: 0;
   margin-bottom: 0;
@@ -103,6 +107,7 @@ button {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
+  outline: 2px solid greenyellow;
 }
 
 /*  Site nav */
@@ -141,6 +146,8 @@ button {
 
 /* Hero */
 .hero {
+  padding: 200px 0;
+
   background-color: #2f303a;
 
   outline: 2px solid greenyellow;
@@ -161,6 +168,9 @@ button {
 
 /* Features */
 .features .title {
+  margin-top: 0;
+  margin-bottom: 10px;
+
   color: var(--title-text-color);
 
   font-size: 14px;
@@ -169,6 +179,8 @@ button {
 }
 
 .features p {
+  margin-top: 0;
+  margin-bottom: 0;
   font-size: 14px;
   line-height: 1.71;
 }
