--- a/css/styles.css
+++ b/css/styles.css
@@ -151,7 +151,7 @@ button {
   margin: 0 auto 94px;
 
   background-color: #2f303a;
-
+  text-align: center;
   outline: 2px solid greenyellow;
 }
 
@@ -163,7 +163,7 @@ button {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
+  /* text-align: center; - added to .hero*/
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
@@ -224,7 +224,7 @@ button {
   line-height: 1.88;
   display: flex;
   align-items: center;
-  text-align: center;
+  /* text-align: center; - added to .hero*/
   letter-spacing: 0.06em;
 }
 
