--- a/css/styles.css
+++ b/css/styles.css
@@ -219,7 +219,6 @@ button {
   margin-bottom: 10px;
 
   color: var(--title-text-color);
-
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
@@ -230,6 +229,10 @@ button {
   margin-bottom: 0;
   font-size: 14px;
   line-height: 1.71;
+}
+
+.features .list {
+  display: flex;
 }
 
 /* Areas */
@@ -286,10 +289,13 @@ button {
 
   color: #212121;
   background-color: #f5f4fa;
-
   font-weight: 500;
   line-height: 1.62;
   letter-spacing: 0.03em;
+}
+
+.filter-btn + .filter-btn {
+  margin-left: 8px;
 }
 
 .button.secondary:focus,
@@ -314,7 +320,6 @@ button {
 
 .logo-white {
   color: var(--contrast-color);
-
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -327,7 +332,6 @@ button {
 
 .adress {
   color: var(--contrast-color);
-
   font-style: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -340,7 +344,6 @@ button {
 
 .ftr-contacts {
   color: rgba(255, 255, 255, 0.6);
-
   font-style: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -355,16 +358,46 @@ button {
 /* СТИЛІ для Portfolio */
 
 .filter-category {
+  margin: 0 24px 20px;
   color: var(--primary-text-color);
-
   font-size: 16px;
   line-height: 1.88;
 }
 
 .project-name {
+  margin: 0 24px 4px;
   color: var(--title-text-color);
-
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+}
+
+.portfolio .filters {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.portfolio .list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.list-element {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.list-element:nth-child(3n) {
+  margin-right: 0;
+}
+
+.list-element:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+
+.img-block {
+  display: block;
+  margin-bottom: 20px;
 }
