--- a/css/styles.css
+++ b/css/styles.css
@@ -357,21 +357,6 @@ button {
 /* ----------------------- */
 /* СТИЛІ для Portfolio */
 
-.filter-category {
-  margin: 0 24px 20px;
-  color: var(--primary-text-color);
-  font-size: 16px;
-  line-height: 1.88;
-}
-
-.project-name {
-  margin: 0 24px 4px;
-  color: var(--title-text-color);
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-}
-
 .portfolio .filters {
   display: flex;
   justify-content: center;
@@ -387,7 +372,7 @@ button {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
-  border: 1px solid #eeeeee;
+  /* border: 1px solid #eeeeee; */
 }
 
 .list-element:nth-child(3n) {
@@ -398,7 +383,27 @@ button {
   margin-bottom: 0;
 }
 
+.filter-category {
+  color: var(--primary-text-color);
+  font-size: 16px;
+  line-height: 1.88;
+  margin: 0;
+}
+
+.project-name {
+  margin: 0 auto 4px;
+  color: var(--title-text-color);
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
 .img-block {
   display: block;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
+}
+
+.card-block {
+  border: 1px solid #eeeeee;
+  padding: 20px 24px;
+  border-top: none;
 }
