--- a/css/styles.css
+++ b/css/styles.css
@@ -245,6 +245,18 @@ button {
   padding-top: 0;
 }
 
+.areas .section-title {
+  margin-bottom: 50px;
+}
+
+.areas .list {
+  display: flex;
+}
+
+.areas .list-item + .list-item {
+  margin-left: 30px;
+}
+
 /* Team */
 .section.team {
   background-color: #f5f4fa;
