--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,6 @@
 body {
   background-color: var(--primary-bgc);
   color: var(--primary-text-color);
-
   font-family: Roboto, sans-serif;
   letter-spacing: 0.03em;
 }
@@ -36,8 +35,6 @@ body {
 header {
   /* padding: 24px 0 25px; */
   background-color: #fff;
-
-  outline: 2px solid greenyellow;
 }
 
 a {
@@ -52,11 +49,8 @@ button {
 
 .container {
   width: 1200px;
-  /* margin-left: auto; */
-  /* margin-right: auto; */
   margin: 0 auto;
   padding: 0 15px;
-  outline: 2px solid greenyellow;
 }
 
 .list {
@@ -82,7 +76,6 @@ button {
 
 .logo-blue {
   color: var(--accent-color);
-
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -95,7 +88,6 @@ button {
 
 .logo-black {
   color: #000000;
-
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -110,12 +102,10 @@ button {
   margin: 0 auto;
 
   color: var(--title-text-color);
-
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
-  outline: 2px solid greenyellow;
 }
 
 /*  Site nav */
@@ -189,16 +179,16 @@ button {
 
 /* Hero */
 .hero {
+  padding: 0;
+
   background-color: #2f303a;
   text-align: center;
-  outline: 2px solid greenyellow;
-  padding: 0;
 }
 
 .hero-title {
   margin: 0 auto 30px;
-  color: #ffffff;
 
+  color: #ffffff;
   font-style: normal;
   font-weight: 900;
   font-size: 44px;
@@ -227,6 +217,7 @@ button {
 .feature-text {
   margin-top: 0;
   margin-bottom: 0;
+
   font-size: 14px;
   line-height: 1.71;
 }
@@ -258,22 +249,53 @@ button {
 }
 
 /* Team */
+.team .section-title {
+  margin-bottom: 50px;
+} /* Could be unify or merge?  */
+
 .section.team {
-  background-color: #f5f4fa;
-  padding: 94px 0;
   margin-bottom: 0;
+  padding: 94px 0;
+
+  background-color: #f5f4fa;
 }
 
-.team .name {
-  color: var(--title-text-color);
+.employee-desc {
+  padding: 30px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 
+  background-color: var(--primary-bgc);
+}
+.team .list {
+  display: flex;
+}
+
+.team .element + .element {
+  margin-left: 30px;
+}
+
+.element {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.name {
+  margin-top: 0;
+  margin-bottom: 10px;
+
+  color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
 }
 
-.team .profession {
+.profession {
+  margin-top: 0;
+  margin-bottom: 0;
+
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
@@ -385,10 +407,11 @@ button {
 }
 
 .list-element {
-  width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
   /* border: 1px solid #eeeeee; */
+
+  width: 370px;
 }
 
 .list-element:nth-child(3n) {
@@ -408,11 +431,13 @@ button {
 
 .project-name {
   margin: 0 auto 4px;
+
   color: var(--title-text-color);
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
 }
+
 .img-block {
   display: block;
   /* margin-bottom: 20px; */
