--- a/css/styles.css
+++ b/css/styles.css
@@ -226,6 +226,9 @@ button {
 .features .list {
   display: flex;
 }
+.feature-block {
+  width: 270px;
+}
 
 .feature-block + .feature-block {
   margin-left: 30px;
