--- a/css/styles.css
+++ b/css/styles.css
@@ -266,11 +266,12 @@ button {
 
 .employee-desc {
   padding: 30px;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
+  /* border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px; - Костиль якщо не викор overflow: hidden; в .element*/
 
   background-color: var(--primary-bgc);
 }
+
 .team .list {
   display: flex;
 }
@@ -283,6 +284,7 @@ button {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  overflow: hidden;
 }
 
 .name {
@@ -444,6 +446,7 @@ button {
 
 .img-block {
   display: block;
+  /* width: 100%; */
   /* margin-bottom: 20px; */
 }
 
