--- a/css/styles.css
+++ b/css/styles.css
@@ -227,7 +227,8 @@ button {
   display: flex;
 }
 .feature-block {
-  width: 270px;
+  /* width: 270px; */
+  width: calc((100% -3 * 30px) / 4);
 }
 
 .feature-block + .feature-block {
@@ -417,7 +418,8 @@ button {
   margin-bottom: 30px;
   /* border: 1px solid #eeeeee; */
 
-  width: 370px;
+  /* width: 370px; */
+  width: calc((100% - 2 * 30px) / 3);
 }
 
 .list-element:nth-child(3n) {
